# muarm

./: README.md  pyproject.toml  requirements.txt
.history/: README.md_20260320155855.new  README_20260314151428.md  README_20260314151845.md  README_20260314185521.md  README_20260320162214.md  README_20260322233605.md  README_20260323204646.md  README_20260323204931.md  README_20260323204938.md  README_20260323205008.md  README_20260323205600.md  README_20260323210451.md  README_20260323214659.md  README_20260323214708.md  README_20260323214716.md  README_20260323214746.md  README_20260323215149.md  README_20260323215340.md  README_20260323215405.md  README_20260323215419.md  README_CN_20260327234457.md  README_CN_20260327235331.md  README_CN_20260327235522.md  README_CN_20260327235540.md  README_CN_20260327235548.md  README_CN_20260327235604.md  README_CN_20260327235716.md  README_CN_20260328000130.md  README_CN_20260328000229.md  README_CN_20260328000458.md  README_CN_20260328000716.md  __init___20260314151428.py  pyproject_20260314151428.toml
.history/control/: __init___20260314151428.py  admittance_controller_20260314151428.py  impedance_controller_20260314151428.py  impedance_controller_20260314190355.py  impedance_controller_20260314190418.py  impedance_controller_20260314204443.py  impedance_controller_20260314204547.py  impedance_controller_20260314204758.py
.history/dynamics/: admittance_controller_20260323210451.py  impedance_controller_20260314205139.py  impedance_controller_20260314215720.py  impedance_controller_20260314224349.py  impedance_controller_20260314224357.py  impedance_controller_20260314230444.py  impedance_controller_20260314231811.py  impedance_controller_20260314232701.py  impedance_controller_20260314232735.py  impedance_controller_20260314232903.py  impedance_controller_20260314233238.py  impedance_controller_20260314235028.py  impedance_controller_20260314235031.py  impedance_controller_20260318020929.py
.history/examples/: demo_admittance_control_20260314145050.py  demo_impedance_control_20260314151428.py  demo_kinematics_20260314145050.py  (+10 more)
dynamics/: impedance_controller.py
examples/: demo_kinematics.py  demo_ppo_reach.py  demo_trajectory.py
install/: local_setup.sh  setup.sh
kinematic/: panda_kinematics.py  run_fk.py  run_ik.py  run_trajectory.py  trajectory.py
learning/: __init__.py  play.py  train.py
log/: latest_build  latest_list
panda_mujoco_gym/: play_panda.py  train_panda.py
src/: __init__.py  kinematics_vis.py  mpc_controller.py  mujoco_viewer.py
src/hw2/hw2_msg/: CMakeLists.txt  package.xml
src/hw2/hw2_msg/msg/: TrajectoryCommand.msg
(+189 files in other folders)
